<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintWidth="16dp"
    tools:context="View.MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                     <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="48dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/blue2.0"
                        android:gravity="center_horizontal"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/app_lista_curso"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editPrimeiroNome"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:text="@string/primeiro_nome"
                        android:inputType="text"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/editSobreNome"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:text="@string/sobrenome"
                        android:inputType="text"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/editCursoDesejado"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:text="@string/cursodesejado"
                        android:inputType="text"
                        android:importantForAutofill="no"/>

                    <EditText
                        android:id="@+id/TelefoneContato"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:text="@string/telefonecontato"
                        android:inputType="text"
                        android:importantForAutofill="no"/>

                    <TextView
                        android:id="@+id/txtListaSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/blue2.0"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/txt_selecione_o_curso"
                        android:textSize="24sp"
                        android:textStyle="bold"/>

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="489dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <Button
                        android:id="@+id/LIMPAR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/limpar" />

                    <Button
                        android:id="@+id/SALVAR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/salvar" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/FINALIZAR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/finalizar" />

            </LinearLayout>

        </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
